integration. added grpc
