# internal/players/controller/controller.go
@@ -1,14 +1,17 @@
 package controller
 
 import (
+	"bytes"
 	"encoding/json"
 	"errors"
+	"fmt"
 	"net/http"
 	"strconv"
 
 	"github.com/erupshis/golang-integration-developer-test/internal/common/consts"
 	"github.com/erupshis/golang-integration-developer-test/internal/common/logger"
 	"github.com/erupshis/golang-integration-developer-test/internal/common/utils/deferutils"
+	"github.com/erupshis/golang-integration-developer-test/internal/players/models"
 	"github.com/erupshis/golang-integration-developer-test/internal/players/storage"
 	"github.com/erupshis/golang-integration-developer-test/internal/players/storage/inmem"
 	"github.com/go-chi/chi/v5"
@@ -34,13 +37,8 @@ func (c *Controller) Route() *chi.Mux {
 
 	r.Get("/player", c.playerHandler)
 	r.Patch("/withdraw", c.withdrawHandler)
-	r.NotFound(c.badRequestHandler)
 
 	return r
-}
-
-func (c *Controller) badRequestHandler(w http.ResponseWriter, _ *http.Request) {
-	w.WriteHeader(http.StatusBadRequest)
 }
 
 // playerHandler func.
@@ -50,11 +48,10 @@ func (c *Controller) badRequestHandler(w http.ResponseWriter, _ *http.Request) {
 // @ID player-select
 // @Produce json
 // @Param id query string true  "player search by id"
-// @Success 200 {object} models.UserData
-// @Success 204
-// @Failure 400 {string} string incorrect query in request
-// @Failure 500 {string} string something wrong with storage
-// @Failure 500 {string} string unexpected marshalling error
+// @Success 200 {object} models.UserDataP
+// @Success 404 {string} string "user not found"
+// @Failure 400 {string} string "incorrect query in request"
+// @Failure 500 {string} string "something wrong with storage"
 // @Router /player [get]
 func (c *Controller) playerHandler(w http.ResponseWriter, r *http.Request) {
 	if r.Body != nil {
@@ -70,10 +67,10 @@ func (c *Controller) playerHandler(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	userData, err := c.userStorage.GetUserByID(playerID)
+	playerData, err := c.userStorage.GetUserByID(playerID)
 	if err != nil {
 		if errors.Is(err, storage.ErrUserNotFound) {
-			w.WriteHeader(http.StatusNoContent)
+			http.Error(w, storage.ErrUserNotFound.Error(), http.StatusNotFound)
 			return
 		}
 
@@ -81,17 +78,7 @@ func (c *Controller) playerHandler(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	respBody, err := json.Marshal(*userData)
-	if err != nil {
-		http.Error(w, "unexpected marshalling error", http.StatusInternalServerError)
-		return
-	}
-
-	_, err = w.Write(respBody)
-	if err != nil {
-		http.Error(w, "unexpected write response error", http.StatusInternalServerError)
-		return
-	}
+	writePlayerDataInResponse(w, playerData)
 }
 
 // withdrawHandler func.
@@ -99,38 +86,33 @@ func (c *Controller) playerHandler(w http.ResponseWriter, r *http.Request) {
 // @Tags player
 // @Summary withdraw currency from player account by ID
 // @ID player-withdraw
-// @Produce plain
-// @Param id query string true  "player search by id"
-// @Param amount query string true  "currency amount"
-// @Success 200 {object} string "OK"
+// @Accept json
+// @Produce json
+// @Param input body models.UserWithdrawP true "user withdraw amount"
+// @Success 200 {object} models.UserDataP
+// @Failure 400 {string} string "incorrect request"
 // @Failure 404 {string} string "user not found"
-// @Failure 400 {string} string "incorrect query in request"
 // @Failure 405 {string} string "insufficient funds"
 // @Failure 500 {string} string "something wrong with storage"
 // @Failure 500 {string} string "unexpected marshalling error"
 // @Router /withdraw [patch]
 func (c *Controller) withdrawHandler(w http.ResponseWriter, r *http.Request) {
-	if r.Body != nil {
-		defer deferutils.ExecSilent(r.Body.Close)
-	}
-
-	queryParams := r.URL.Query()
-	rawID := queryParams.Get(consts.ID)
-	rawAmount := queryParams.Get(consts.Amount)
-
-	playerID, err := strconv.ParseInt(rawID, 10, 64)
+	var buf bytes.Buffer
+	_, err := buf.ReadFrom(r.Body)
 	if err != nil {
-		http.Error(w, "incorrect query in request", http.StatusBadRequest)
+		http.Error(w, fmt.Sprintf("unexpected during reading req body: %v", err), http.StatusInternalServerError)
+		return
+	}
+	defer deferutils.ExecSilent(r.Body.Close)
+
+	playerWithdrawData := &models.UserWithdrawP{}
+	if err = json.Unmarshal(buf.Bytes(), playerWithdrawData); err != nil {
+		http.Error(w, "incorrect request", http.StatusBadRequest)
 		return
 	}
 
-	currencyAmount, err := strconv.ParseInt(rawAmount, 10, 64)
+	balance, err := c.userStorage.WithdrawBalance(playerWithdrawData.ID, playerWithdrawData.Amount)
 	if err != nil {
-		http.Error(w, "incorrect query in request", http.StatusBadRequest)
-		return
-	}
-
-	if err = c.userStorage.WithdrawBalance(playerID, currencyAmount); err != nil {
 		if errors.Is(err, storage.ErrUserNotFound) {
 			http.Error(w, "user not found", http.StatusNotFound)
 			return
@@ -143,7 +125,17 @@ func (c *Controller) withdrawHandler(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	_, err = w.Write([]byte("OK"))
+	writePlayerDataInResponse(w, &models.UserDataP{ID: playerWithdrawData.ID, Balance: balance})
+}
+
+func writePlayerDataInResponse(w http.ResponseWriter, playerData *models.UserDataP) {
+	respBody, err := json.Marshal(*playerData)
+	if err != nil {
+		http.Error(w, "unexpected marshalling error", http.StatusInternalServerError)
+		return
+	}
+
+	_, err = w.Write(respBody)
 	if err != nil {
 		http.Error(w, "unexpected write response error", http.StatusInternalServerError)
 		return
