# internal/players/models/models.go
@@ -1,7 +1,12 @@
 package models
 
 //go:generate easyjson -all models.go
-type UserData struct {
-	ID      int64
-	Balance int64
+type UserDataP struct {
+	ID      int64 `json:"id"`
+	Balance int64 `json:"balance"`
+}
+
+type UserWithdrawP struct {
+	ID     int64 `json:"id"`
+	Amount int64 `json:"amount"`
 }
